CobraCompiler/CobraCompiler/obj/Release/net7.0/ExprParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.6.6
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Github Repos\P4-project\CobraCompiler\CobraCompiler\ExprParser.g4 by ANTLR 4.6.6

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace CobraCompiler {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.6.6")]
[System.CLSCompliant(false)]
public partial class ExprParser : Parser {
	public const int
		OR=1, AND=2, EQUAL=3, NOT=4, GREAT=5, LESS=6, GREATEQL=7, LESSEQL=8, ASSIGN=9, 
		COMMA=10, SEMI=11, COLON=12, LPAREN=13, RPAREN=14, LCURLY=15, RCURLY=16, 
		TRUE=17, FALSE=18, ADD=19, SUB=20, MUL=21, DIV=22, BOOL=23, TEXT=24, NUM=25, 
		LIST=26, QUOTE=27, IF=28, ELSE=29, REPEAT=30, TIMES=31, WHILE=32, FOREACH=33, 
		IN=34, FUNCTION=35, RETURN=36, CALL=37, LISTADD=38, LISTIDXOF=39, LISTDEL=40, 
		LISTVALOF=41, STR=42, INT=43, ID=44, WS=45;
	public const int
		RULE_program = 0, RULE_cmds = 1, RULE_cmd = 2, RULE_dcl = 3, RULE_ass = 4, 
		RULE_stmt = 5, RULE_expr = 6, RULE_oprOr = 7, RULE_logicOr = 8, RULE_oprAnd = 9, 
		RULE_logicAnd = 10, RULE_oprEql = 11, RULE_equal = 12, RULE_oprBool = 13, 
		RULE_bool = 14, RULE_oprExpr = 15, RULE_term = 16, RULE_oprTerm = 17, 
		RULE_factor = 18, RULE_block = 19, RULE_ctrlStrct = 20, RULE_ifStmt = 21, 
		RULE_elseIfStmt = 22, RULE_else = 23, RULE_loop = 24, RULE_loops = 25, 
		RULE_loopStmt = 26, RULE_whileStmt = 27, RULE_foreachStmt = 28, RULE_listStmt = 29, 
		RULE_listOpr = 30, RULE_funcCall = 31, RULE_funcDef = 32, RULE_funcReturn = 33, 
		RULE_paramList = 34, RULE_paramTail = 35, RULE_param = 36, RULE_argList = 37, 
		RULE_argTail = 38, RULE_boolean = 39, RULE_type = 40;
	public static readonly string[] ruleNames = {
		"program", "cmds", "cmd", "dcl", "ass", "stmt", "expr", "oprOr", "logicOr", 
		"oprAnd", "logicAnd", "oprEql", "equal", "oprBool", "bool", "oprExpr", 
		"term", "oprTerm", "factor", "block", "ctrlStrct", "ifStmt", "elseIfStmt", 
		"else", "loop", "loops", "loopStmt", "whileStmt", "foreachStmt", "listStmt", 
		"listOpr", "funcCall", "funcDef", "funcReturn", "paramList", "paramTail", 
		"param", "argList", "argTail", "boolean", "type"
	};

	private static readonly string[] _LiteralNames = {
		null, "'or'", "'and'", "'is'", "'is not'", "'>'", "'<'", "'>='", "'<='", 
		"'='", "','", "';'", "':'", "'('", "')'", "'{'", "'}'", "'true'", "'false'", 
		"'+'", "'-'", "'*'", "'/'", "'boolean'", "'text'", "'number'", "'list'", 
		"'\"'", "'if'", "'else'", "'repeat'", "'times'", "'while'", "'for each'", 
		"'in'", "'function'", "'return'", "'call'", "'Add'", "'IndexOf'", "'Delete'", 
		"'ValueOf'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "OR", "AND", "EQUAL", "NOT", "GREAT", "LESS", "GREATEQL", "LESSEQL", 
		"ASSIGN", "COMMA", "SEMI", "COLON", "LPAREN", "RPAREN", "LCURLY", "RCURLY", 
		"TRUE", "FALSE", "ADD", "SUB", "MUL", "DIV", "BOOL", "TEXT", "NUM", "LIST", 
		"QUOTE", "IF", "ELSE", "REPEAT", "TIMES", "WHILE", "FOREACH", "IN", "FUNCTION", 
		"RETURN", "CALL", "LISTADD", "LISTIDXOF", "LISTDEL", "LISTVALOF", "STR", 
		"INT", "ID", "WS"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete("Use IRecognizer.Vocabulary instead.")]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "ExprParser.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public ExprParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class ProgramContext : ParserRuleContext {
		public CmdsContext cmds() {
			return GetRuleContext<CmdsContext>(0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterProgram(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitProgram(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_program);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 82; cmds();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmdsContext : ParserRuleContext {
		public CmdContext cmd() {
			return GetRuleContext<CmdContext>(0);
		}
		public CmdsContext cmds() {
			return GetRuleContext<CmdsContext>(0);
		}
		public CmdsContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmds; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterCmds(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitCmds(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmds(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmdsContext cmds() {
		CmdsContext _localctx = new CmdsContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_cmds);
		try {
			State = 88;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case BOOL:
			case TEXT:
			case NUM:
			case LIST:
			case IF:
			case REPEAT:
			case FUNCTION:
			case CALL:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 84; cmd();
				State = 85; cmds();
				}
				break;
			case Eof:
			case RCURLY:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CmdContext : ParserRuleContext {
		public StmtContext stmt() {
			return GetRuleContext<StmtContext>(0);
		}
		public DclContext dcl() {
			return GetRuleContext<DclContext>(0);
		}
		public CmdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_cmd; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterCmd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitCmd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCmd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CmdContext cmd() {
		CmdContext _localctx = new CmdContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_cmd);
		try {
			State = 92;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case IF:
			case REPEAT:
			case FUNCTION:
			case CALL:
			case ID:
				EnterOuterAlt(_localctx, 1);
				{
				State = 90; stmt();
				}
				break;
			case BOOL:
			case TEXT:
			case NUM:
			case LIST:
				EnterOuterAlt(_localctx, 2);
				{
				State = 91; dcl();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DclContext : ParserRuleContext {
		public TypeContext type() {
			return GetRuleContext<TypeContext>(0);
		}
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public AssContext ass() {
			return GetRuleContext<AssContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(ExprParser.SEMI, 0); }
		public DclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dcl; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterDcl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitDcl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDcl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DclContext dcl() {
		DclContext _localctx = new DclContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_dcl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 94; type();
			State = 95; Match(ID);
			State = 96; ass();
			State = 97; Match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssContext : ParserRuleContext {
		public ITerminalNode ASSIGN() { return GetToken(ExprParser.ASSIGN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public AssContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ass; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterAss(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitAss(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAss(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssContext ass() {
		AssContext _localctx = new AssContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_ass);
		try {
			State = 102;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case ASSIGN:
				EnterOuterAlt(_localctx, 1);
				{
				State = 99; Match(ASSIGN);
				State = 100; expr();
				}
				break;
			case SEMI:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StmtContext : ParserRuleContext {
		public ITerminalNode ID() { return GetToken(ExprParser.ID, 0); }
		public ITerminalNode ASSIGN() { return GetToken(ExprParser.ASSIGN, 0); }
		public ExprContext expr() {
			return GetRuleContext<ExprContext>(0);
		}
		public ITerminalNode SEMI() { return GetToken(ExprParser.SEMI, 0); }
		public CtrlStrctContext ctrlStrct() {
			return GetRuleContext<CtrlStrctContext>(0);
		}
		public ListStmtContext listStmt() {
			return GetRuleContext<ListStmtContext>(0);
		}
		public FuncDefContext funcDef() {
			return GetRuleContext<FuncDefContext>(0);
		}
		public FuncCallContext funcCall() {
			return GetRuleContext<FuncCallContext>(0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_stmt; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterStmt(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitStmt(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StmtContext stmt() {
		StmtContext _localctx = new StmtContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_stmt);
		try {
			State = 117;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 104; Match(ID);
				State = 105; Match(ASSIGN);
				State = 106; expr();
				State = 107; Match(SEMI);
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 109; ctrlStrct();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 110; listStmt();
				State = 111; Match(SEMI);
				}
				break;

			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 113; funcDef();
				}
				break;

			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 114; funcCall();
				State = 115; Match(SEMI);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ExprContext : ParserRuleContext {
		public LogicOrContext logicOr() {
			return GetRuleContext<LogicOrContext>(0);
		}
		public OprOrContext oprOr() {
			return GetRuleContext<OprOrContext>(0);
		}
		public ExprContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_expr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterExpr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitExpr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitExpr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ExprContext expr() {
		ExprContext _localctx = new ExprContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_expr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 119; logicOr();
			State = 120; oprOr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OprOrContext : ParserRuleContext {
		public ITerminalNode OR() { return GetToken(ExprParser.OR, 0); }
		public LogicOrContext logicOr() {
			return GetRuleContext<LogicOrContext>(0);
		}
		public OprOrContext oprOr() {
			return GetRuleContext<OprOrContext>(0);
		}
		public OprOrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oprOr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterOprOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitOprOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOprOr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OprOrContext oprOr() {
		OprOrContext _localctx = new OprOrContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_oprOr);
		try {
			State = 127;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case OR:
				EnterOuterAlt(_localctx, 1);
				{
				State = 122; Match(OR);
				State = 123; logicOr();
				State = 124; oprOr();
				}
				break;
			case SEMI:
			case RPAREN:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicOrContext : ParserRuleContext {
		public LogicAndContext logicAnd() {
			return GetRuleContext<LogicAndContext>(0);
		}
		public OprAndContext oprAnd() {
			return GetRuleContext<OprAndContext>(0);
		}
		public LogicOrContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicOr; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterLogicOr(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitLogicOr(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicOr(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicOrContext logicOr() {
		LogicOrContext _localctx = new LogicOrContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_logicOr);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 129; logicAnd();
			State = 130; oprAnd();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OprAndContext : ParserRuleContext {
		public ITerminalNode AND() { return GetToken(ExprParser.AND, 0); }
		public LogicAndContext logicAnd() {
			return GetRuleContext<LogicAndContext>(0);
		}
		public OprAndContext oprAnd() {
			return GetRuleContext<OprAndContext>(0);
		}
		public OprAndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oprAnd; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterOprAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitOprAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOprAnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OprAndContext oprAnd() {
		OprAndContext _localctx = new OprAndContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_oprAnd);
		try {
			State = 137;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case AND:
				EnterOuterAlt(_localctx, 1);
				{
				State = 132; Match(AND);
				State = 133; logicAnd();
				State = 134; oprAnd();
				}
				break;
			case OR:
			case SEMI:
			case RPAREN:
				EnterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LogicAndContext : ParserRuleContext {
		public EqualContext equal() {
			return GetRuleContext<EqualContext>(0);
		}
		public OprEqlContext oprEql() {
			return GetRuleContext<OprEqlContext>(0);
		}
		public LogicAndContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_logicAnd; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterLogicAnd(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitLogicAnd(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLogicAnd(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LogicAndContext logicAnd() {
		LogicAndContext _localctx = new LogicAndContext(_ctx, State);
		EnterRule(_localctx, 20, RULE_logicAnd);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 139; equal();
			State = 140; oprEql();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OprEqlContext : ParserRuleContext {
		public ITerminalNode EQUAL() { return GetToken(ExprParser.EQUAL, 0); }
		public EqualContext equal() {
			return GetRuleContext<EqualContext>(0);
		}
		public OprEqlContext oprEql() {
			return GetRuleContext<OprEqlContext>(0);
		}
		public ITerminalNode NOT() { return GetToken(ExprParser.NOT, 0); }
		public OprEqlContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_oprEql; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterOprEql(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitOprEql(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOprEql(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OprEqlContext oprEql() {
		OprEqlContext _localctx = new OprEqlContext(_ctx, State);
		EnterRule(_localctx, 22, RULE_oprEql);
		try {
			State = 151;
			_errHandler.Sync(this);
			switch (_input.La(1)) {
			case EQUAL:
				EnterOuterAlt(_localctx, 1);
				{
				State = 142; Match(EQUAL);
				State = 143; equal();
				State = 144; oprEql();
				}
				break;
			case NOT:
				EnterOuterAlt(_localctx, 2);
				{
				State = 146; Match(NOT);
				State = 147; equal();
				State = 148; oprEql();
				}
				break;
			case OR:
			case AND:
			case SEMI:
			case RPAREN:
				EnterOuterAlt(_localctx, 3);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EqualContext : ParserRuleContext {
		public BoolContext @bool() {
			return GetRuleContext<BoolContext>(0);
		}
		public OprBoolContext oprBool() {
			return GetRuleContext<OprBoolContext>(0);
		}
		public EqualContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_equal; } }
		public override void EnterRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.EnterEqual(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IExprParserListener typedListener = listener as IExprParserListener;
			if (typedListener != null) typedListener.ExitEqual(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IExprParserVisitor<TResult> typedVisitor = visitor as IExprParserVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEqual(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EqualContext equal() {
		EqualContext _localctx = new EqualContext(_ctx, State);
		EnterRule(_localctx, 24, RULE_equal);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 153; @bool();
			State = 154; oprBool();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
